<package>
  <name>compal_gazebo</name>
  <version>0.1.0</version>
  <description>compal_gazebo</description>
<!--
  maintainer and url are from the gazebo_ros tutorial
-->
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>agv2_description</run_depend>
  <run_depend>agv2_control</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
